maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:8: error: ';' expected but '=' found.
  vary:Int=getMondeHauteur()
          ^