maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    // Your code here
}

def Numeroter(){
  var x:Int=getMondeLargeur()
  vary:Int=getMondeHauteur()
  
}